--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -2,61 +2,94 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
     <title>{% block title %}Vermont Public Radio{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{% block description %}{{ social.description }}{% endblock %}">
-
-    <!-- Styles -->
-{% block style %}
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-{% endblock %}
-
-
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
-
-{% include "_social.html" %}
-{% include "_underwriter_script.html" %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<!-- Jquery used by below anayltics code -->
-{% include "_analytics.html" %}
-
 </head>
 
 <body>
 
-<div id="page_container">
-{% block navbar %}{% include "_navbar.html" %}{% endblock %}
+<h1>VPR Classical</h1>
 
-{% block content %}{% endblock %}
-</div>
+<h2>On Now</h2>
 
-{% block footer %}
-<footer>
-    <div class="container">
-        <p><span class="hidden-xs" id="vpr_address">Vermont Public Radio // 365 Troy Avenue // Colchester, VT 05446 // (802) 655-9451</span> <span id="copyright">&copy; Vermont Public Radio 2014</span></p>
-    </div>
-</footer>
-{% endblock %}
+<h3 id="program-on-air"></h3>
+<p id="program-time"><span id="program-start"></span> &mdash; <span id="program-end"></span></p>
 
+<h4>Playing Now</h4>
+<p id="track-playing"><span id="composer"></span> - <span id="track-name"></span> <span id="track-start-time"></span></p>
 
-{% block scripts %}
-{% endblock %}
-
-{% block grunt %}
-<script src="//localhost:35729/livereload.js"></script>
-<script type='text/javascript'>//<![CDATA[
-;document.write("<script defer src='//HOST:3000/socket.io/socket.io.js'><\/script><script defer src='//HOST:3001/client/browser-sync-client.0.9.1.js'><\/script>".replace(/HOST/g, location.hostname));
-//]]></script>
-{% endblock %}
+<h2>Up Next</h2>
+<h3 id="program-up-next"></h3>
+<p id="next-program-time"><span id="next-program-start"></span> &mdash; <span id="next-program-end"></span></p>
 
 
+
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script>
+    var VPR = {};
+
+    VPR.callComposer;
+
+    VPR.getSong = function() {
+        $.get('https://api.composer.nprstations.org/v1/widget/518028fee1c810b152ff9766/now?format=json', function (data) {
+
+            VPR.data = data;
+
+            VPR.programOnNow = {
+                'name': VPR.data.onNow.program.name,
+                'start': VPR.convertTime(VPR.data.onNow.start_time),
+                'end': VPR.convertTime(VPR.data.onNow.end_time)
+            };
+
+            VPR.trackOnNow = {
+                'name': VPR.data.onNow.song.trackName,
+                'composer': VPR.data.onNow.song.composerName,
+                'start': VPR.convertTime(VPR.data.onNow.song._start)
+            };
+
+            VPR.programUpNext = {
+                'name': VPR.data.nextUp[0].program.name,
+                'start': VPR.convertTime(VPR.data.nextUp[0].start_time),
+                'end': VPR.convertTime(VPR.data.nextUp[0].end_time)
+            };
+
+            VPR.updateFields();
+
+        });
+    };
+
+    VPR.convertTime = function(timestamp) {
+        var hour = timestamp.split(':')[0],
+            min = timestamp.split(':')[1],
+            dd = "AM";
+
+        if (parseInt(hour) >= 12) {
+            hour -= "12";
+            dd = "PM"
+        }
+        if (hour == 0) {
+            hour = "12";
+        }
+        return hour + ":" + min + " " + dd;
+    }
+
+    VPR.updateFields = function() {
+        document.getElementById('program-on-air').textContent = VPR.programOnNow.name;
+        document.getElementById('program-start').textContent = VPR.programOnNow.start;
+        document.getElementById('program-end').textContent = VPR.programOnNow.end;
+
+        document.getElementById('composer').textContent = VPR.trackOnNow.composer;
+        document.getElementById('track-name').textContent = VPR.trackOnNow.name;
+        document.getElementById('track-start-time').textContent = "(" + VPR.trackOnNow.start + ")";
+
+        document.getElementById('program-up-next').textContent = VPR.programUpNext.name;
+        document.getElementById('next-program-start').textContent = VPR.programUpNext.start;
+        document.getElementById('next-program-end').textContent = VPR.programUpNext.end;
+    };
+
+
+    VPR.getSong();
+
+</script>
 </body>
 </html>
