--- a/main/templates/_river.html
+++ b/main/templates/_river.html
@@ -1,35 +1,40 @@
-<div id="river">
-    <div class="container">
-        <div class="row story-row">
-        {% for story in stories %}
-            <div class="story-box col-sm-6">
-                <div class="row">
-                        <div class="col-xs-12">
-                        <p class="dateline">{{ story.date }}</p>
-                        <h3 class="title"><a href="{{ story.link }}">{{ story.title }}</a></h3>
-                        <p class="byline">By {{ story.byline|upper }}</p>
-                        </div>
-                </div>
-                <div class="story_text row">
-                    <div class="col-xs-12">
-                        <div class="story_image">
-                        {% if story.image %}
-                            <a href="{{ story.link }}"><img src="{{ story.image }}" class="img-responsive pull-left" alt="{{ story.title }}"></a>
-                        {% endif %}
-                        </div>
-                        {% for paragraph in story.text %}
-                        <p>{{ paragraph|safe }}</p>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        {% if loop.index != 10 and loop.index is divisibleby 2 %}
-        </div>
-        <div class="row story-row">
-        {% elif loop.index == 10 %}
-        </div>
-        {% endif %}
-        {% endfor %}
-        </div>
-    </div>
-</div>
+<script>
+(function() {
+  var httpRequest;
+  document.getElementById("ajaxButton").onclick = function() { makeRequest('test.html'); };
+
+  function makeRequest(url) {
+    if (window.XMLHttpRequest) { // Mozilla, Safari, ...
+      httpRequest = new XMLHttpRequest();
+    } else if (window.ActiveXObject) { // IE
+      try {
+        httpRequest = new ActiveXObject("Msxml2.XMLHTTP");
+      } 
+      catch (e) {
+        try {
+          httpRequest = new ActiveXObject("Microsoft.XMLHTTP");
+        } 
+        catch (e) {}
+      }
+    }
+
+    if (!httpRequest) {
+      alert('Giving up :( Cannot create an XMLHTTP instance');
+      return false;
+    }
+    httpRequest.onreadystatechange = alertContents;
+    httpRequest.open('GET', url);
+    httpRequest.send();
+  }
+
+  function alertContents() {
+    if (httpRequest.readyState === 4) {
+      if (httpRequest.status === 200) {
+        alert(httpRequest.responseText);
+      } else {
+        alert('There was a problem with the request.');
+      }
+    }
+  }
+})();
+</script>
