Add handlebars, get AJAX working

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -36,125 +36,10 @@
 
 <body>
 
-<h2>On Now</h2>
-
-<div id="program">
-    <h3 id="program-on-air"></h3>
-    <p id="program-time"><span id="program-start"></span> &mdash; <span id="program-end"></span></p>
+<div id="playing-now">
 </div>
 
-<div id="song">
-    <h4>Playing Now</h4>
-    <p id="track-playing"><span id="composer"></span> - <span id="track-name"></span> <span id="track-start-time"></span></p>
-</div>
+<script src="{{ url_for('static', filename='js/script.min.js') }}"></script>
 
-<div id="up-next">
-    <h2>Up Next</h2>
-    <h3 id="program-up-next"></h3>
-    <p id="next-program-time"><span id="next-program-start"></span> &mdash; <span id="next-program-end"></span></p>
-</div>
-
-<script>
-// self calling anonymous function
-(function() {
-    var url = 'https://api.composer.nprstations.org/v1/widget/518028fee1c810b152ff9766/now?format=json',
-        httpRequest,
-        programOnNow,
-        programUpNext,
-        trackOnNow,
-        callComposer = function(url, eventHandler) {
-            if (window.XMLHttpRequest) {
-                httpRequest = new XMLHttpRequest();
-            } else if (window.ActiveXObject) {
-                try {
-                    httpRequest = new ActiveXObject("Msxml2.XMLHTTP");
-                }
-                catch (e) {
-                    try {
-                        httpRequest = new activeXObject("Microsoft.XMLHTTP");
-                    }
-                    catch (e) {}
-                }
-            }
-
-            if (!httpRequest) {
-                alert("Fail, cannot create XMLHTTP instance");
-            }
-
-            httpRequest.onreadystatechange = function() {
-                if (httpRequest.readyState === 4 && httpRequest.status === 200) {
-                    eventHandler();
-                }
-        };
-
-        httpRequest.open('GET', url)
-        httpRequest.send();
-    };
-
-
-    convertTime = function(timestamp) {
-        var hour = parseInt(timestamp.split(':')[0]),
-            min = timestamp.split(':')[1],
-            ampm = "AM";
-
-        if (hour >= 12) {
-            hour -= 12;
-            ampm = "PM"
-        }
-
-        if (hour == 0) {
-            hour = "12";
-        }
-
-        return hour.toString() + ":" + min + " " + ampm;
-    };
-
-    updateFields = function() {
-        document.getElementById('program-on-air').textContent = programOnNow.name;
-        document.getElementById('program-start').textContent = programOnNow.start;
-        document.getElementById('program-end').textContent = programOnNow.end;
-
-        if (trackOnNow) {
-            document.getElementById('composer').textContent = trackOnNow.composer;
-            document.getElementById('track-name').textContent = trackOnNow.name;
-            document.getElementById('track-start-time').textContent = trackOnNow.start;
-        }
-
-        document.getElementById('program-up-next').textContent = programUpNext.name;
-        document.getElementById('next-program-start').textContent = programUpNext.start;
-        document.getElementById('next-program-end').textContent = programUpNext.end;
-    };
-
-
-    callComposer(url, function() {
-        data = JSON.parse(httpRequest.responseText);
-
-        programOnNow = {
-            'name': data.onNow.program.name,
-            'start': convertTime(data.onNow.start_time),
-            'end': convertTime(data.onNow.end_time),
-            'link': data.onNow.program.program_link
-        };
-
-        if (typeof data.onNow.song !== 'undefined') {
-            trackOnNow = {
-                'name': data.onNow.song.trackName,
-                'composer': data.onNow.song.composerName,
-                'start': convertTime(data.onNow.song._start)
-            };
-        }
-
-        programUpNext = {
-            'name': data.nextUp[0].program.name,
-            'start': convertTime(data.nextUp[0].start_time),
-            'end': convertTime(data.nextUp[0].end_time),
-            'link': data.nextUp[0].program.program_link
-        };
-
-        updateFields();
-    });
-
-})();
-</script>
 </body>
 </html>
