--- a/main/static/dev/handlebars/playingNow.handlebars
+++ b/main/static/dev/handlebars/playingNow.handlebars
@@ -1,10 +1,6 @@
 <div id="program">
     <h2>On Now</h2>
-    {{# if programOnNow.link }}
-    <h3><a href="{{ programOnNow.link }}">{{ programOnNow.name }}</a></h3>
-    {{ else }}
     <h3>{{ programOnNow.name }}</h3>
-    {{/if}}
     <p>{{ programOnNow.start }} - {{ programOnNow.end }}</p>
 </div>
 
@@ -14,15 +10,11 @@
     <p>{{ trackOnNow.composer }} - {{ trackOnNow.name }} ({{ trackOnNow.start }})</p>
 </div>
 {{ else }}
-<p id="no-playlist">Playlist data unavailable for {{ programOnNow.name }}</p>
+<p id="no-playlist">Playlist not available. {{# if programOnNow.link }}<a href="{{ programOnNow.link }}" target="_blank">Contact the host</a> to inquire about a piece.</p>{{/if}}
 {{/if}}
 
 <div id="up-next">
     <h2>Up Next</h2>
-    {{# if programUpNext.link }}
-    <h3><a href="{{ programUpNext.link }}">{{ programUpNext.name }}</a></h3>
-    {{ else }}
     <h3>{{ programUpNext.name }}</h3>
-    {{/if}}
     <p>{{ programUpNext.start }} - {{ programUpNext.end }}</p>
 </div>
