Create playlist calendar

--- a/main/templates/now-playing.html
+++ b/main/templates/now-playing.html
@@ -39,7 +39,7 @@
 <div id="playing-now">
 </div>
 
-<script src="{{ url_for('static', filename='js/script.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/nowScript.min.js') }}"></script>
 
 </body>
 </html>
