--- a/main/templates/_navbar.html
+++ b/main/templates/_navbar.html
@@ -4,7 +4,7 @@
             <div id="vpr_logo">
                 <a class="navbar-brand" href="http://www.vpr.net"><div id="vpr_svg"></div></a>
             </div>
-            <h1 id="navbar-title"><a href="{{ url_for('index') }}">{{ page_title }}</a></h1>
+            <h1 id="navbar-title"><a href="{{ url_for('playlist_calendar') }}">{{ page_title }}</a></h1>
             {% if social %}
             <ul class="list-inline" id="social-logos">
                 <li><a href="https://www.facebook.com/sharer.php?u={{ page_url|urlencode }}" target="_blank"><i class="icon ion-social-facebook"></i></a></li>
