--- a/main/static/dev/handlebars/playlistCalendar.handlebars
+++ b/main/static/dev/handlebars/playlistCalendar.handlebars
@@ -2,7 +2,7 @@
 <div class="row schedule">
     <div class="col-xs-12">
         <h2>Schedule for {{ dateString }}</h2>
-        <p class="click-to-playlist">Click on a program to see it's playlist</p>
+        <p class="click-to-playlist">Click on a program to see its playlist</p>
     </div>
 
     <div class="col-sm-6">
